# nChess

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmarks/include/: Benchmark.h  BoardMoveBenchmarks.h  MoveReaderBenchmark.h  PGNRunnerBenchmark.h
benchmarks/src/: BoardMoveBenchmarks.cpp  MoveReaderBenchmark.cpp  PGNRunnerBenchmark.cpp
include/: Board.hpp  UCIParser.hpp
include/benchmark/: Benchmark.h  BoardMoveBenchmarks.h  MoveReaderBenchmark.h
include/io/: MoveReader.h  UCIParser.hpp
include/pieces/: Bishop.hpp  King.hpp  Knight.hpp  Pawn.hpp  Queen.hpp  Rook.hpp
scripts/: UCIFileConverter.cpp  cleanupUCIFile.awk
scripts/bench/: capCPUs.awk  grub.orig  hideLastCore.sh  restoreLastCore.sh
scripts/extras/: downloadBenchPGN.sh
src/: Board.cpp  UCIParser.cpp  main.cpp
src/benchmark/: BoardMoveBenchmarks.cpp  MoveReaderBenchmark.cpp
src/io/: MoveReader.cpp  UCIParser.cpp
src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rook.cpp
src/test/: PieceMovesTest.cpp  Test.cpp
test/include/: PieceMovesTest.h  Test.h
test/src/: PieceMovesTest.cpp  Test.cpp
